Ensure scrollToFragmentAnchor called before restoreScrollPositionAndViewState.

This issue is caused by FrameLoader::restoreScrollPositionAndViewState
being called by FrameView::setContentsSize when reloading.
restoreScrollPositionAndViewState calls ScrollableArea::setScrollOffset which
clears FrameView::m_fragmentAnchor so the DIV scroll to incorrect position.

In this patch we move scrollToFragmentAnchor to setContentsSize before
restoreScrollPositionAndViewState.

BUG=656658
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2541513004
Cr-Commit-Position: refs/heads/master@{#436682}

Former-commit-id: 6d072f7c3b55dbe96358cb9623dfce5e756bad54